# ramble_old

./: .gitignore  .replit  pyproject.toml
ramble/: .gitignore  requirements.txt
ramble/ramble/: settings.py
ramble/rambleapp/: __init__.py  admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
ramble/rambleapp/signals/: my_handler.py
ramble/rambleapp/static/css/: signup_in_styles.css  signup_in_styles.css.map  signup_in_styles.scss  style.css
ramble/rambleapp/templates/: 404.html  base.html
ramble/rambleapp/templates/actstream/: action.html  actor.html
ramble/rambleapp/templates/magiclink/: login_failed.html  login_ml.html  login_sent.html
ramble/rambleapp/templates/postman/: base.html
ramble/rambleapp/templates/rambleapp/: base.html  collection_modal.html  contact_us.html  display_draft.html  display_liked_users.html  display_post.html  editor_page.html  index.html  landing_page.html  login.html  login_ra.html  make_profile.html  notifications.html  post.html  previewpost.html  search_results.html  signin.html  signup.html  signup_in.html  signup_old.html  tag_page.html  user_base.html  user_collections.html  user_followers.html  user_follows.html  user_posts.html  your_stories.html  your_stories_drafts.html  your_stories_published.html
templates/rambleapp/: base.html
