[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["shwetharmaiya <<>>"]
description = ""
name = "repl_python3_ramble"
version = "0.1.0"
[tool.poetry.dependencies]
certifi = "^2021.5.30"
config = "^0.5.0"
configparser = "^5.0.2"
django = "^3.2.3"
django-crispy-forms = "^1.11.2"
django-postman = "^4.2"
django-taggit = "^1.4.0"
python = "^3.8"
simple-aes-cipher = "^1.0.7"
social-auth-app-django = "^4.0.0"
[tool.poetry.dev-dependencies]
